--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@capacitor/android": "^3.4.3",
     "@capacitor/core": "^3.4.3",
+    "@capacitor/geolocation": "^1.3.1",
     "@capacitor/ios": "^3.4.3",
     "axios": "^0.26.1",
     "pinia": "^2.0.13",
