--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "@capacitor/core": "^3.4.3",
     "@capacitor/geolocation": "^1.3.1",
     "@capacitor/ios": "^3.4.3",
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "axios": "^0.26.1",
     "pinia": "^2.0.13",
     "vue": "^3.2.33",
