--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@capacitor/core": "^3.4.3",
     "@capacitor/geolocation": "^1.3.1",
     "@capacitor/ios": "^3.4.3",
+    "@fawmi/vue-google-maps": "^0.9.67",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
